# PDAJ-Projekat

./: Dockerfile  generators.py  launch_app.sh  list_comp.py  list_comprehension.py  mprocessing.py  pyproject.toml  sequential.py
scripts/: generators.py  mprocessing.py  sequential.py
web_app/closest_points/: apps.py  views.py
web_app/closest_points/scripts/: list_comprehension.py
web_app/web_app/: settings.py  urls.py
